# libbdvmi

./: .gitignore  Makefile.am  README  configure.ac
examples/: Makefile.am  testctrl.cpp
include/: Makefile.am
include/bdvmi/: utils.h  xenaltp2m.h  xencontrol.h  xendomainwatcher.h  xendriver.h  xeneventmanager.h  xsutils.h
src/: Makefile.am  bdvmixenaltp2m.cpp  bdvmixencontrol.cpp  bdvmixendomainwatcher.cpp  bdvmixendriver.cpp  bdvmixeneventmanager.cpp  bdvmixsutils.cpp
src/tests/: Makefile.am  main.cpp
