include_HEADERS = bdvmi/domainhandler.h bdvmi/driver.h bdvmi/eventmanager.h \
    bdvmi/loghelper.h bdvmi/utils.h bdvmi/xendomainwatcher.h bdvmi/xeneventmanager.h \
    bdvmi/backendfactory.h bdvmi/domainwatcher.h bdvmi/eventhandler.h \
    bdvmi/xencache.h bdvmi/xencontrol.h bdvmi/xendriver.h bdvmi/xeninlines.h bdvmi/xsutils.h \
    bdvmi/statscollector.h
