AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libbdvmi.la

libbdvmi_la_SOURCES = bdvmibackendfactory.cpp bdvmidomainwatcher.cpp \
    bdvmixenaltp2m.cpp \
    bdvmixencache.cpp bdvmixencontrol.cpp bdvmixendomainwatcher.cpp \
    bdvmixendriver.cpp  bdvmixeneventmanager.cpp bdvmixsutils.cpp \
    bdvmistatscollector.cpp

SUBDIRS = tests
